Fix tab content has not gap and update documents

--- a/assets/css/partials/article.scss
+++ b/assets/css/partials/article.scss
@@ -203,7 +203,7 @@
   }
 
   .highlight {
-    margin-bottom: 16px;
+    margin: 16px 0;
     position: relative;
 
     pre {
